@@ -4,6 +4,11 @@
  * (Videopreview) Ctrl+H toggles displaying the info about the video.
  * Don't use "set_property switch_video" when using the nsv demuxer. It makes
    mplayer stop displaying the video after a few seconds.
+ * Added a new option: Video -> Start/stop taking screenshots (of each frame)
+   assigned by default to "Shift+D" (the icon for this action: screenshots.png)
+   When this option is selected, a screenshot will be taken (and saved in
+   png format to the screenshot folder) for each frame. Select the option
+   again to stop taking screenshots. 
 
 (2009-03-16)
  * (Windows) Now by default the combos in Preferences -> Drives will show all
